with inferences and observations

--- a/matplotlib_homework.ipynb
+++ b/matplotlib_homework.ipynb
@@ -4,13 +4,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Inferences and Observations\n",
+    "Inferences and Observations:\n",
+    "\n",
+    "FYI: images of all the charts are in folder in resources\n",
+    "\n",
+    "1. There seems to be a positive correlation between weight of the mouse on Capomulin and the tumor volume.  The heavier the mouse, the larger the tumor volume.\n",
+    "2. Ramicane and Capomulin were the 2 most promising drug regimens based on lowest tumor volume\n",
+    "3. Out of the 4 most promising drugs, Ceftamin and Infubinol had l\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -18,13 +24,13 @@
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import pandas as pd\n",
-    "import scipy.stats as st\n",
+    "import scipy.stats as sts\n",
     "from scipy.stats import linregress\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 113,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +125,7 @@
        "4     g791     Ramicane    Male          11          16"
       ]
      },
-     "execution_count": 102,
+     "execution_count": 114,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -130,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +331,7 @@
        "9           22.050126                 1  "
       ]
      },
-     "execution_count": 104,
+     "execution_count": 116,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -346,7 +352,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [
     {
@@ -462,7 +468,7 @@
        "Naftisol                     186               186  "
       ]
      },
-     "execution_count": 105,
+     "execution_count": 117,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -481,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -495,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [
     {
@@ -660,7 +666,7 @@
        "Zoniferol                   0.516398  "
       ]
      },
-     "execution_count": 74,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -693,7 +699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [
     {
@@ -730,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 77,
+   "execution_count": 122,
    "metadata": {
     "scrolled": true
    },
@@ -752,7 +758,7 @@
        "Name: Mouse ID, dtype: int64"
       ]
      },
-     "execution_count": 77,
+     "execution_count": 122,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -765,7 +771,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
@@ -807,7 +813,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [
     {
@@ -838,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [
     {
@@ -866,7 +872,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 126,
    "metadata": {},
    "outputs": [
     {
@@ -892,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 127,
    "metadata": {},
    "outputs": [
     {
@@ -923,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 128,
    "metadata": {
     "scrolled": false
    },
@@ -934,7 +940,7 @@
        "['Ramicane', 'Capomulin', 'Infubinol', 'Ceftamin']"
       ]
      },
-     "execution_count": 83,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +952,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 129,
    "metadata": {
     "scrolled": false
    },
@@ -1066,7 +1072,7 @@
        "[100 rows x 3 columns]"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 129,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1080,16 +1086,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 85,
+   "execution_count": 130,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001E3D8455588>"
+       "<pandas.core.groupby.generic.DataFrameGroupBy object at 0x000001E3D812C8C8>"
       ]
      },
-     "execution_count": 85,
+     "execution_count": 130,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1114,7 +1120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 131,
    "metadata": {},
    "outputs": [
     {
@@ -1185,7 +1191,7 @@
        "1.00  47.685963  45.220869  72.226731  68.923185"
       ]
      },
-     "execution_count": 86,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1200,7 +1206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 87,
+   "execution_count": 132,
    "metadata": {
     "scrolled": true
    },
@@ -1281,7 +1287,7 @@
        "IQR    7.781863   9.098537  11.477135  15.577752"
       ]
      },
-     "execution_count": 87,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1302,7 +1308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 88,
+   "execution_count": 133,
    "metadata": {},
    "outputs": [
     {
@@ -1397,7 +1403,7 @@
        "Above Outliers  51.832015  54.306811  82.741446  87.666458"
       ]
      },
-     "execution_count": 88,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,7 +1429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 134,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1448,7 +1454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": 135,
    "metadata": {},
    "outputs": [
     {
@@ -1485,7 +1491,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 136,
    "metadata": {},
    "outputs": [
     {
@@ -1601,7 +1607,7 @@
        "s185               36.866876                 0  "
       ]
      },
-     "execution_count": 91,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1617,7 +1623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 137,
    "metadata": {},
    "outputs": [
     {
@@ -1649,7 +1655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 138,
    "metadata": {},
    "outputs": [
     {
@@ -1692,7 +1698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 139,
    "metadata": {},
    "outputs": [
     {
@@ -1905,7 +1911,7 @@
        "24     y793          17           38.506829"
       ]
      },
-     "execution_count": 94,
+     "execution_count": 139,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1921,7 +1927,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 140,
    "metadata": {},
    "outputs": [
     {
@@ -1958,7 +1964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 143,
    "metadata": {},
    "outputs": [
     {
@@ -1974,13 +1980,13 @@
     "tumor_v = capo_df2['Tumor Volume (mm3)']\n",
     "\n",
     "\n",
-    "r = st.pearsonr(weight, tumor_v)[0]\n",
+    "r = sts.pearsonr(weight, tumor_v)[0]\n",
     "print(f\"The correlation coefficient between weight and average tumor volume (mm3) is {round(r, 2)}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 142,
    "metadata": {},
    "outputs": [
     {
